--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -2,18 +2,20 @@
   <div class="col-xs-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title"></h3>
+        <h3 class="panel-title">{{ contact.name }}</h3>
         <div class="row">
-          <div class="col-xs-12">
-            <img src="" alt="" />
-            <button class="btn btn-primary">Edit</button>
-            <button class="btn btn-danger">Delete</button>
+          <div class="col-xs-12 space-between">
+            <img [src]="contact.imageUrl" [alt]="contact.name" />
+            <div class="button-set">
+              <button class="btn btn-primary">Edit</button>
+              <button class="btn btn-danger">Delete</button>
+            </div>
           </div>
         </div>
       </div>
       <div class="panel-body">
-        <p><strong>Email:</strong></p>
-        <p><strong>Phone:</strong></p>
+        <p><strong>Email:</strong> {{ contact.email }}</p>
+        <p><strong>Phone:</strong> {{ contact.phone }}</p>
       </div>
     </div>
   </div>
