--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -6,24 +6,11 @@
         <button class="btn btn-success pull-right">New Contact</button>
       </div>
       <div class="panel-body">
-        <a
-          href="#"
-          class="list-group-item clearfix"
+        <cms-contact-item
           *ngFor="let contact of contacts"
-        >
-          <div class="pull-left">
-            <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-            <p class="list-group-item-text">{{ contact.description }}</p>
-          </div>
-          <span class="pull-right">
-            <img
-              [src]="contact.imageUrl"
-              [alt]="contact.name"
-              class="img-responsive"
-              style="max-height: 50px"
-            />
-          </span>
-        </a>
+          [contact]="contact"
+          (click)="onSelected(contact)"
+        ></cms-contact-item>
       </div>
     </div>
   </div>
