--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,10 +1,15 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-5">
-      <cms-contact-list></cms-contact-list>
+    <div class="col-md-6">
+      <cms-contact-list
+        (selectedContactEvent)="selectedContact = $event"
+      ></cms-contact-list>
     </div>
-    <div class="col-md-7">
-      <cms-contact-detail></cms-contact-detail>
+    <div class="col-md-5">
+      <cms-contact-detail
+        *ngIf="selectedContact"
+        [contact]="selectedContact"
+      ></cms-contact-detail>
     </div>
   </div>
 </div>
