Added document functionality and dropdown directive

--- a/src/app/messages/message-edit/message-edit.component.html
+++ b/src/app/messages/message-edit/message-edit.component.html
@@ -1,6 +1,11 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <form action="" id="documentEdit" (submit)="$event.preventDefault()">
+    <form
+      action=""
+      id="documentEdit"
+      (submit)="$event.preventDefault()"
+      autocomplete="off"
+    >
       <div class="row">
         <div class="col-sm-12 form-group">
           <label for="subject">Subject</label>
