--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+.panel-title {
+  font-weight: bold;
+  font-size: 2em;
+  margin-block: 1em;
+}
