--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -6,7 +6,7 @@
         <div class="row">
           <div class="col-xs-12 space-between">
             <img [src]="contact.imageUrl" [alt]="contact.name" />
-            <div class="button-set">
+            <div class="btn-toolbar">
               <button class="btn btn-primary">Edit</button>
               <button class="btn btn-danger">Delete</button>
             </div>
