--- a/src/app/messages/message-item/message-item.component.html
+++ b/src/app/messages/message-item/message-item.component.html
@@ -1,6 +1,6 @@
 <a class="list-group-item clearfix">
-  <div class="">
-    <span class="message-header"> {{ message.sender }} </span>
-    <div class="message-text">{{ message.msgText }}</div>
+  <div>
+    <span class="message-header"> {{ messageSender }} </span>
+    <div class="message-text">{{ message?.msgText }}</div>
   </div>
 </a>
