--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -7,8 +7,8 @@
           <div class="col-xs-12 space-between">
             <img [src]="contact.imageUrl" [alt]="contact.name" />
             <div class="btn-toolbar">
-              <button class="btn btn-primary">Edit</button>
-              <button class="btn btn-danger">Delete</button>
+              <a routerLink="edit" class="btn btn-primary">Edit</a>
+              <a (click)="onDelete()" class="btn btn-danger">Delete</a>
             </div>
           </div>
         </div>
@@ -20,34 +20,3 @@
     </div>
   </div>
 </div>
-
-<!-- <div class="row">
-  <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive" />
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h3>Recipe Name</h3>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle">
-        Manage Recipe <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">Add to Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">Description</div>
-</div>
-<div class="row">
-  <div class="col-xs-12">Ingredients</div>
-</div> -->
