--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -3,13 +3,12 @@
     <div class="panel panel-default">
       <div class="panel-heading clearfix">
         <h3 class="panel-title pull-left">Contacts</h3>
-        <button class="btn btn-success pull-right">New Contact</button>
+        <a routerLink="new" class="btn btn-success pull-right">New Contact</a>
       </div>
       <div class="panel-body">
         <cms-contact-item
           *ngFor="let contact of contacts"
           [contact]="contact"
-          (click)="onSelected(contact)"
         ></cms-contact-item>
       </div>
     </div>
