--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">WeLearn CMS</a>
+      <a class="navbar-brand">WeLearn CMS</a>
     </div>
 
     <div class="collapse navbar-collapse">
@@ -18,12 +18,12 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" cmsDropdown>
-          <a href="#" class="dropdown-toggle" role="button">
+          <a class="dropdown-toggle" role="button">
             User <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a>Save Data</a></li>
+            <li><a>Fetch Data</a></li>
           </ul>
         </li>
       </ul>
