Added MongoDB and updated services

--- a/src/app/messages/message-item/message-item.component.html
+++ b/src/app/messages/message-item/message-item.component.html
@@ -1,6 +1,6 @@
 <a class="list-group-item clearfix">
   <div>
-    <span class="message-header"> {{ messageSender }} </span>
+    <span class="message-header"> {{ message?.sender?.name }} </span>
     <div class="message-text">{{ message?.msgText }}</div>
   </div>
 </a>
